--- a/HA3/HA3.ipynb
+++ b/HA3/HA3.ipynb
@@ -50,11 +50,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train shape: (7337, 2132)\n",
+      "X_ivs shape: (816, 2132)\n",
+      "y_train shape: (7337,)\n"
+     ]
+    }
+   ],
    "source": [
-    "X_train, X_ivs, y_train, col_names = pickle.load(open(\"drd2_data.pickle\", \"rb\"))"
+    "X_train, X_ivs, y_train, col_names = pickle.load(open(\"drd2_data.pickle\", \"rb\"))\n",
+    "\n",
+    "# Print the shapes or lengths of the variables to get an idea of their dimensions\n",
+    "print(\"X_train shape:\", X_train.shape if hasattr(X_train, 'shape') else len(X_train) if hasattr(X_train, '__len__') else None)\n",
+    "print(\"X_ivs shape:\", X_ivs.shape if hasattr(X_ivs, 'shape') else len(X_ivs) if hasattr(X_ivs, '__len__') else None)\n",
+    "print(\"y_train shape:\", y_train.shape if hasattr(y_train, 'shape') else len(y_train) if hasattr(y_train, '__len__') else None)\n"
    ]
   },
   {
