Hyperparam working but not fully run

--- a/HA3/HA3.ipynb
+++ b/HA3/HA3.ipynb
@@ -64590,7 +64590,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Hyperparameters: {'svr__C': 1, 'svr__gamma': 0.01}\n"
+      "Best Hyperparameters: {'svr__C': 1, 'svr__gamma': 0.01}\n",
+      "MSE: 0.02728966340598053\n",
+      "MAE: 0.12654396154674286\n",
+      "R2: 0.6434415045875056\n"
      ]
     }
    ],
@@ -64654,30 +64657,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                     Model                        Dataset        R2  \\\n",
-      "0  Support Vector Machines       X_train_98_no_zeroes_SVM  0.024809   \n",
-      "1  Support Vector Machines          X_train_small_var_SVM  0.024404   \n",
-      "2  Support Vector Machines  X_train_98_nozeros_scaled_SVD  0.025942   \n",
-      "3  Support Vector Machines       X_train_best_features_rf  0.229066   \n",
-      "\n",
-      "               Best Params  \n",
-      "0   {'C': 1, 'gamma': 0.1}  \n",
-      "1   {'C': 1, 'gamma': 0.1}  \n",
-      "2  {'C': 10, 'gamma': 0.1}  \n",
-      "3   {'C': 1, 'gamma': 0.1}  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Model</th>\n",
+       "      <th>Dataset</th>\n",
+       "      <th>R2</th>\n",
+       "      <th>Best Params</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Support Vector Machine</td>\n",
+       "      <td>98% Zero Values Removed</td>\n",
+       "      <td>0.643442</td>\n",
+       "      <td>{'svr__C': 1, 'svr__gamma': 0.01}</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    Model                  Dataset        R2  \\\n",
+       "0  Support Vector Machine  98% Zero Values Removed  0.643442   \n",
+       "\n",
+       "                         Best Params  \n",
+       "0  {'svr__C': 1, 'svr__gamma': 0.01}  "
+      ]
+     },
+     "execution_count": 269,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print the updated DataFrame\n",
-    "print(results_hyperparam)"
+    "results_hyperparam"
    ]
   },
   {
