Hyperparam of top 3 models - not run

--- a/HA3/HA3.ipynb
+++ b/HA3/HA3.ipynb
@@ -64573,7 +64573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64646,13 +64646,88 @@
     "    'R2': np.mean(cv_results_best_model['test_r2']),\n",
     "    'Best Params': grid_search.best_params_\n",
     "}, \n",
-    "ignore_index=True)\n",
+    "ignore_index=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 271,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Hyperparameters for Support Vector Machine: {'svr__C': 1, 'svr__gamma': 0.01}\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Hyperparameter tuning loop for the top 3 performing models ###\n",
     "\n",
+    "# List of top-performing models\n",
+    "top_models = [\n",
+    "    # First top performing model\n",
+    "    {\n",
+    "        'Model': 'Support Vector Machine',\n",
+    "        'Dataset': '98% Zero Values Removed',\n",
+    "        'Scaling': 'Power Transform',\n",
     "\n",
-    "# Display the results\n",
-    "print(\"MSE:\", np.mean(cv_results_best_model['test_mse']))\n",
-    "print(\"MAE:\", np.mean(cv_results_best_model['test_mae']))\n",
-    "print(\"R2:\", np.mean(cv_results_best_model['test_r2']))"
+    "    },\n",
+    "    # Second top performing model\n",
+    "    {\n",
+    "        'Model': 'Support Vector Machine',\n",
+    "        'Dataset': 'Small Variance Removed',\n",
+    "        'Scaling': 'Power Transform',\n",
+    "    },\n",
+    "   # Third top performing model\n",
+    "    {\n",
+    "        'Model': 'Support Vector Machine',\n",
+    "        'Dataset': '98% Zero Values Removed',\n",
+    "        'Scaling': 'Standard Scaler',\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "# Iterate over the top models\n",
+    "for best_model_info in top_models:\n",
+    "    # Extract the dataset for the best performing model\n",
+    "    best_model_dataset = preprocessed_datasets[best_model_info['Dataset']]\n",
+    "    X_best, y_best = best_model_dataset\n",
+    "\n",
+    "    # Define the parameter grid for SVM\n",
+    "    param_grid = {\n",
+    "        'svr__C': [1], #[0.1, 1, 10, 100],\n",
+    "        'svr__gamma': [0.01] #[0.01, 0.1, 1, 10, 100]\n",
+    "    }\n",
+    "\n",
+    "    # Create the pipeline with the preprocessor, SimpleImputer, and the model\n",
+    "    pipeline = make_pipeline(preprocessor, SimpleImputer(strategy='mean'), SVR()) \n",
+    "\n",
+    "    # Create the GridSearchCV object\n",
+    "    grid_search = GridSearchCV(estimator=pipeline, param_grid=param_grid, scoring='neg_mean_squared_error', cv=2)\n",
+    "\n",
+    "    # Fit the grid search to the data\n",
+    "    grid_search.fit(X_best, y_best)\n",
+    "\n",
+    "    # Display the best hyperparameters\n",
+    "    print(f\"Best Hyperparameters for {best_model_info['Model']}:\", grid_search.best_params_)\n",
+    "\n",
+    "    # Retrieve the best model\n",
+    "    best_model = grid_search.best_estimator_\n",
+    "\n",
+    "    # Perform cross-validation with the best model\n",
+    "    cv_results_best_model = cross_validate(best_model, X_best, y_best, cv=kfold, scoring=scoring)\n",
+    "\n",
+    "    # Store the results in the DataFrame\n",
+    "    results_hyperparam = results_hyperparam.append({\n",
+    "        'Model': best_model_info['Model'],\n",
+    "        'Dataset': best_model_info['Dataset'],\n",
+    "        'R2': np.mean(cv_results_best_model['test_r2']),\n",
+    "        'Best Params': grid_search.best_params_\n",
+    "    }, ignore_index=True)\n",
+    "\n",
+    "# Print the final DataFrame with results\n",
+    "print(results_hyperparam)"
    ]
   },
   {
