--- a/HA3/HA3.ipynb
+++ b/HA3/HA3.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64745,19 +64745,20 @@
     "# scaler = StandardScaler()\n",
     "# columns_to_scale = X_train_98_nozeros.columns[~X_train_98_nozeros.columns.isin(binary_columns)]\n",
     "\n",
-    "X_train_df_scaled_SVM = X_train_98_nozeros.copy()\n",
-    "X_test_df_scaled_SVM = X_train_98_nozeros.copy()\n",
+    "# X_train_df_scaled_SVM = X_train_98_nozeros.copy()\n",
+    "# X_test_df_scaled_SVM = X_train_98_nozeros.copy()\n",
     "\n",
-    "X_train_df_scaled_SVM[columns_to_scale] = scaler.fit_transform(X_train_98_nozeros[columns_to_scale])\n",
-    "X_test_df_scaled_SVM[columns_to_scale] = scaler.fit_transform(X_train_98_nozeros[columns_to_scale])\n",
-    "X_train_df_scaled_SVM.describe()\n",
+    "# X_train_df_scaled_SVM[columns_to_scale] = scaler.fit_transform(X_train_98_nozeros[columns_to_scale])\n",
+    "# X_test_df_scaled_SVM[columns_to_scale] = scaler.fit_transform(X_train_98_nozeros[columns_to_scale])\n",
+    "# X_train_df_scaled_SVM.describe()\n",
     "\n",
-    "pt = PowerTransformer(standardize=False) # because the data has a lot of zeros\n",
+    "pt = PowerTransformer() # because the data has a lot of zeros\n",
     "X_train_SVM = pd.DataFrame(pt.fit_transform(X_train_df), columns=X_train_df.columns)\n",
+    "svm = SVR(kernel='rbf')\n",
     "\n",
     "param_grid = {\n",
     "    'C': [0.1, 1, 10],           # Regularization parameter\n",
-    "    'gamma': [0.1, 1, 10]         # Kernel coefficient (only for 'rbf' and 'poly')\n",
+    "    'gamma': [1, 0.1, 0.01, 0.001, 0.0001]         # Kernel coefficient\n",
     "}\n",
     "\n",
     "grid_search = GridSearchCV(svm, param_grid, cv=5, scoring='r2')\n",
