Added code for prediction calculations
Added code for predictions calculation on IVS

--- a/HA3/HA3.ipynb
+++ b/HA3/HA3.ipynb
@@ -64726,18 +64726,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Best Parameters:  {'C': 0.1, 'gamma': 1}\n",
-      "Best R2 Score: -0.10\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Import dataset with 98% zero values removed and power transform\n",
     "\n",
@@ -64752,8 +64743,8 @@
     "# X_test_df_scaled_SVM[columns_to_scale] = scaler.fit_transform(X_train_98_nozeros[columns_to_scale])\n",
     "# X_train_df_scaled_SVM.describe()\n",
     "\n",
-    "pt = PowerTransformer() # because the data has a lot of zeros\n",
-    "X_train_SVM = pd.DataFrame(pt.fit_transform(X_train_df), columns=X_train_df.columns)\n",
+    "pt = PowerTransformer()\n",
+    "X_train_SVM = pd.DataFrame(pt.fit_transform(X_train_98_nozeros), columns=X_train_98_nozeros.columns)\n",
     "svm = SVR(kernel='rbf')\n",
     "\n",
     "param_grid = {\n",
@@ -65076,21 +65067,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testing the best model on IVS:"
+    "## 3. Predictions calculation"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Predictions calculation"
+    "Using the best performing model (Suppot Vector Machines using ...) to make predictions on IVS dataset:"
    ]
   },
   {
@@ -65098,7 +65082,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pt = PowerTransformer()\n",
+    "X_test_SVM_IVS = pd.DataFrame(pt.fit_transform(X_test_98_nozeros), columns=X_test_98_nozeros.columns)\n",
+    "svm = SVR(kernel='rbf', gamma='scale', C=1)\n",
+    "y_pred = svm.predict(X_test_SVM_IVS)\n",
+    "y_pred.head()\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
