--- a/HA3/HA3.ipynb
+++ b/HA3/HA3.ipynb
@@ -38804,7 +38804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -64573,7 +64573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64726,36 +64726,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Parameters:  {'C': 1}\n",
+      "Best R2 Score: 0.62\n"
+     ]
+    }
+   ],
    "source": [
-    "#Import dataset with 98% zero values removed and power transform\n",
-    "\n",
-    "# Standardize the selected features\n",
-    "# scaler = StandardScaler()\n",
-    "# columns_to_scale = X_train_98_nozeros.columns[~X_train_98_nozeros.columns.isin(binary_columns)]\n",
-    "\n",
-    "# X_train_df_scaled_SVM = X_train_98_nozeros.copy()\n",
-    "# X_test_df_scaled_SVM = X_train_98_nozeros.copy()\n",
-    "\n",
-    "# X_train_df_scaled_SVM[columns_to_scale] = scaler.fit_transform(X_train_98_nozeros[columns_to_scale])\n",
-    "# X_test_df_scaled_SVM[columns_to_scale] = scaler.fit_transform(X_train_98_nozeros[columns_to_scale])\n",
-    "# X_train_df_scaled_SVM.describe()\n",
-    "\n",
     "pt = PowerTransformer()\n",
     "X_train_SVM = pd.DataFrame(pt.fit_transform(X_train_98_nozeros), columns=X_train_98_nozeros.columns)\n",
-    "svm = SVR(kernel='rbf')\n",
+    "svm = SVR(kernel='rbf', gamma='scale')\n",
     "\n",
     "param_grid = {\n",
-    "    'C': [0.1, 1, 10],           # Regularization parameter\n",
-    "    'gamma': [1, 0.1, 0.01, 0.001, 0.0001]         # Kernel coefficient\n",
+    "    'C': [0.1, 1, 10]        # Regularization parameter\n",
     "}\n",
     "\n",
     "grid_search = GridSearchCV(svm, param_grid, cv=5, scoring='r2')\n",
     "\n",
     "grid_search.fit(X_train_SVM, Y_train_df)\n",
-    "results_hyperparam.loc[len(results_hyperparam)] = ['Support Vector Machines', grid_search.best_score_, grid_search.best_params_]\n",
+    "# results_hyperparam.loc[len(results_hyperparam)] = ['Support Vector Machines', grid_search.best_score_, grid_search.best_params_]\n",
     "print(\"Best Parameters: \", grid_search.best_params_)\n",
     "print(\"Best R2 Score: %.2f\" % (grid_search.best_score_))\n"
    ]
@@ -64829,13 +64824,6 @@
     }
    ],
    "source": [
-    "# scaler = StandardScaler()\n",
-    "# columns_to_scale = X_train_df_small_var.columns[~X_train_df_small_var.columns.isin(binary_columns)]\n",
-    "\n",
-    "# X_train_df_scaled_AdaB = X_train_df_small_var.copy()\n",
-    "\n",
-    "# X_train_df_scaled_AdaB[columns_to_scale] = scaler.fit_transform(X_train_df_small_var[columns_to_scale])\n",
-    "\n",
     "pt = PowerTransformer() # because the data has a lot of zeros\n",
     "X_train_AdaB = pd.DataFrame(pt.fit_transform(X_train_df_small_var), columns=X_train_df_small_var.columns)\n",
     "\n",
@@ -64880,13 +64868,6 @@
     }
    ],
    "source": [
-    "# Standardize the selected features\n",
-    "# scaler = StandardScaler()\n",
-    "# columns_to_scale = X_train_df.columns[~X_train_df.columns.isin(binary_columns)]\n",
-    "\n",
-    "# X_train_df_scaled = X_train_df.copy()\n",
-    "\n",
-    "# X_train_df_scaled[columns_to_scale] = scaler.fit_transform(X_train_df_scaled[columns_to_scale])\n",
     "pt = PowerTransformer()\n",
     "X_train_power_transformed_st = pd.DataFrame(pt.fit_transform(X_train_df), columns=X_train_df.columns)\n",
     "\n",
@@ -65074,21 +65055,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the best performing model (Suppot Vector Machines using ...) to make predictions on IVS dataset:"
+    "Using the best performing model (Support Vector Machines using dataset with features containing more than 98% zeros removed and power transformation used) to make predictions on IVS dataset:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.87040025, 0.68479202, 0.43071995, ..., 0.31173774, 0.51755586,\n",
+       "       0.08270957])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pt = PowerTransformer()\n",
     "X_test_SVM_IVS = pd.DataFrame(pt.fit_transform(X_test_98_nozeros), columns=X_test_98_nozeros.columns)\n",
-    "svm = SVR(kernel='rbf', gamma='scale', C=1)\n",
+    "svm = SVR(kernel='rbf')\n",
+    "svm.fit(X_train_SVM, Y_train_df)\n",
     "y_pred = svm.predict(X_test_SVM_IVS)\n",
-    "y_pred.head()\n",
-    "\n"
+    "y_pred"
    ]
   },
   {
